--- a/Aplikacje_internetowe/JavaScript/p1.html
+++ b/Aplikacje_internetowe/JavaScript/p1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        alert("Test js w repozytorium");
+        alert("Wstawione na GitHub - remote");
     </script>
 </body>
 </html>
